samples/_failures_safe/1761004815_f2ec26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9da65dd8.c: In function ‘main’:
./samples/SAFE/__tmp_9da65dd8.c:141:5: error: expected declaration or statement at end of input
  141 |     state_t current_state = STATE_A;
      |     ^~~~~~~
